chore: more tests for Tries